client/css/main.css
/* ... */
.model-sort h1,
model-field-reference-sort-edit h1,
model-field-list-edit h1 {
  margin: 10px 0;
  padding: 0 0;
  vertical-align: middle;
  line-height: 40px;
  font-size: 20px;
  font-weight: 600;
}
.model-sort h1 .spacer,
model-field-reference-sort-edit h1 .spacer,
model-field-list-edit h1 .spacer {
  font-size: 10px;
  vertical-align: middle;
  padding: 0 10px;
}
.model-sort ul,
model-field-reference-sort-edit ul,
model-field-list-edit ul {
  list-style: none;
  margin: 0 10px;
  padding: 0 0;
}
.model-sort ul li,
model-field-reference-sort-edit ul li,
model-field-list-edit ul li {
  position: relative;
  border: solid 1px #dedede;
  border-width: 1px 1px 0 1px;
  padding: 0px 10px;
  line-height: 44px;
  background-color: #fefefe;
  cursor: move;
  clear: both;
  white-space: nowrap;
}
.model-sort ul li .fa-reorder,
model-field-reference-sort-edit ul li .fa-reorder,
model-field-list-edit ul li .fa-reorder {
  color: #eee;
}
.model-sort ul li .title,
model-field-reference-sort-edit ul li .title,
model-field-list-edit ul li .title {
  position: absolute;
  display: block;
  top: 0;
  bottom: 0;
  left: 30px;
  right: 119px;
  text-overflow: ellipsis;
  overflow: hidden;
}
.model-sort ul li .list-field-container,
model-field-reference-sort-edit ul li .list-field-container,
model-field-list-edit ul li .list-field-container {
  display: block;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 30px;
  right: 40px;
  padding: 5px 0;
}
.model-sort ul li .list-field,
model-field-reference-sort-edit ul li .list-field,
model-field-list-edit ul li .list-field {
  display: table-cell;
  padding-left: 10px;
}
.model-sort ul li .list-field input,
model-field-reference-sort-edit ul li .list-field input,
model-field-list-edit ul li .list-field input {
  border-color: #eee;
}
.model-sort ul li .action,
model-field-reference-sort-edit ul li .action,
model-field-list-edit ul li .action {
  float: right;
}
.model-sort ul li .action a,
model-field-reference-sort-edit ul li .action a,
model-field-list-edit ul li .action a {
  display: inline-block;
  cursor: pointer;
  text-align: center;
}
.model-sort ul li .action a.up,
model-field-reference-sort-edit ul li .action a.up,
model-field-list-edit ul li .action a.up {
  width: 32px;
}
.model-sort ul li .action a.down,
model-field-reference-sort-edit ul li .action a.down,
model-field-list-edit ul li .action a.down {
  width: 32px;
}
.model-sort ul li .action a.edit,
model-field-reference-sort-edit ul li .action a.edit,
model-field-list-edit ul li .action a.edit {
  width: 55px;
}
.model-sort ul li .action a.remove,
model-field-reference-sort-edit ul li .action a.remove,
model-field-list-edit ul li .action a.remove {
  width: 32px;
  color: #8b0000;
}
.model-sort ul li .action a.remove:hover,
model-field-reference-sort-edit ul li .action a.remove:hover,
model-field-list-edit ul li .action a.remove:hover {
  color: #f00;
}
.model-sort ul li:last-child,
model-field-reference-sort-edit ul li:last-child,
model-field-list-edit ul li:last-child {
  border-width: 1px 1px;
}
.model-sort .save-sort-button,
model-field-reference-sort-edit .save-sort-button,
model-field-list-edit .save-sort-button {
  margin: 20px 10px;
}
.model-sort .list-add-item,
model-field-reference-sort-edit .list-add-item,
model-field-list-edit .list-add-item {
  width: 100%;
}
model-field-reference-sort-edit ul,
model-field-list-edit ul {
  margin: 10px 0;
}
model-field-reference-sort-edit ul .sortable-placeholder,
model-field-list-edit ul .sortable-placeholder {
  height: 44px;
  background-color: #f3f3f3;
}
model-field-list-edit ul {
  margin: 0 0 10px 0;
}
.model-nav h1 {
  margin: 10px 0;
  padding: 0 0;
  vertical-align: middle;
  line-height: 40px;
  font-size: 20px;
  font-weight: 600;
}
.model-nav h1 .spacer {
  font-size: 10px;
  vertical-align: middle;
  padding: 0 10px;
}
.model-nav h3 {
  font-size: 14px;
  margin: 0 0;
  padding: 5px 5px;
  border-bottom: 1px solid #d0d0d0;
  background-color: #e0e0e0;
}
.model-nav h3 .title-controls {
  visibility: hidden;
}
.model-nav h3:hover .title-controls {
  visibility: visible;
}
.model-nav div[data-schemaid='root'] > h3:first-child {
  margin-bottom: 15px;
  background-color: transparent;
  border-bottom: none;
}
.model-nav div[data-schemaid='root'] > h3:first-child .array-controls {
  margin: 0 0;
  float: none;
}
.model-nav div[data-schemapath='root.0'] {
  border-right: 1px solid #ddd;
}
.model-nav .tabs {
  padding-right: 0;
}
.model-nav .form-group {
  margin: 0 0;
  padding: 5px 10px 5px 0;
  background-color: #ebebeb;
  border-bottom: 1px solid #ddd;
}
.model-nav .form-group label.control-label {
  margin: 0 0;
  padding: 5px 20px 5px 10px;
  font-weight: 400;
  width: 20%;
  text-align: left;
  vertical-align: top;
}
.model-nav .form-group .form-control {
  display: inline-block;
  width: 80%;
}
.model-nav .form-group .help-block {
  margin-left: 20%;
  padding-left: 5px;
  color: #aaa;
  font-size: 10px;
}
.model-nav .well:first-child {
  margin-left: 0;
}
.model-nav .well {
  position: relative;
  padding: 0;
  margin: 0 0 0 22px;
  background: none;
  box-sahdow: none;
  -webkit-box-shadow: none;
  border: none;
}
.model-nav .well > div:first-child {
  border-left: 1px solid #ddd;
}
.model-nav .json-editor-btn-collapse {
  margin-right: 10px;
  width: 34px;
  height: 34px;
  border-radius: 17px;
  padding: 0 0;
  text-align: center;
  overflow: hidden;
  outline: none;
}
.model-nav .json-editor-btn-collapse:focus {
  outline: none;
}
.model-nav .array-controls {
  float: right;
}
.model-nav .title-controls {
  float: right;
}
.model-nav .ace_editor {
  display: inline-block;
  width: 80% !important;
  height: 100px !important;
}
.model-nav .save-button {
  float: left;
  width: 100%;
  margin: 20px 0 0 0;
}
.dashboard {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
.dashboard .top-nav {
  position: fixed;
  height: 64px;
  top: 0;
  left: 0;
  right: 0;
  background-color: #3a7dc2;
}
/* ... */

